--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/association
-spring.datasource.username=root
+# application.properties
+spring.datasource.url=jdbc:h2:file:C:/Users/GOKUKRI/test;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
 server.port=8082
+
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
